tests/ui/typeck/mismatched-types-ref-binding.stderr
error[E0308]: mismatched types
  --> $DIR/mismatched-types-ref-binding.rs:7:30
   |
LL |     let ref string: String = var;
   |                              ^^^- help: try using a conversion method: `.to_string()`
   |                              |
   |                              expected `String`, found `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
